--- a/themes/liva-hugo/assets/scss/_variables.scss
+++ b/themes/liva-hugo/assets/scss/_variables.scss
@@ -1,13 +1,21 @@
 // Color Variables
 $primary-color: #aa1100;
-$text-color: #666666;
-$text-color-dark: #222222;
-$text-color-light: #959595;
-$body-color: #fff;
+$text-color: #fff;
+$text-color-dark: #fff;
+$text-color-light: #fff;
+$body-color: #000;
 $border-color: #f95437;
 $black: #000;
 $white: #fff;
-$gray: #ffedec;
+$gray: #fff;
+
+.post-meta span {
+    color: #fff !important;
+}
+
+.card {
+    background-color: #000;
+}
 
 // Font Variables
 $primary-font: 'Raleway', sans-serif;
