--- a/themes/liva-hugo/assets/scss/_variables.scss
+++ b/themes/liva-hugo/assets/scss/_variables.scss
@@ -17,6 +17,10 @@ $gray: #fff;
     background-color: #000;
 }
 
+.text-primary {
+    font-weight: 900;
+}
+
 // Font Variables
 $primary-font: 'Raleway', sans-serif;
 $icon-font: 'themify';
