--- a/themes/liva-hugo/layouts/index.html
+++ b/themes/liva-hugo/layouts/index.html
@@ -49,14 +49,18 @@
           {{ end }}
           <div class="media-body">
             <div class="mb-3 post-meta">
-              <span>By {{ .Site.Params.Author }}</span>
+              <span>By {{ .Params.author }}</span>
               {{ if not .Params.HideDate }}
               <span class="border-bottom border-primary px-2 mx-1"></span>
               <span>{{ .PublishDate.Format "02 Jan 2006" }}</span>
               {{ end }}
             </div>
             <a href="{{ .Permalink }}" class="h5 d-block mb-3">{{ .Title | markdownify }}</a>
-            <a href="{{ .Permalink }}" class="btn btn-outline-primary">read more</a>
+            {{ if (isset .Params "external") }}
+            <a href="{{ .Params.external }}" class="btn btn-outline-primary">read more</a>
+            {{ else }}
+            <a href="{{ .Permalink  }}" class="btn btn-outline-primary">read more</a>
+            {{ end }}
           </div>
         </article>
       </div>
@@ -86,14 +90,18 @@
                 {{ end }}
                 <a href="{{ .Permalink }}" class="h5 d-block my-3">{{ .Title | markdownify }}</a>
                 <div class="mb-3 post-meta">
-                  <span>By {{ .Site.Params.Author }}</span>
+                  <span>By {{ .Params.author }}</span>
                   {{ if not .Params.HideDate }}
                   <span class="border-bottom border-primary px-2 mx-1"></span>
                   <span>{{ .PublishDate.Format "02 January 2006" }}</span>
                   {{ end }}
                 </div>
                 <p class="card-text">{{ .Summary }}</p>
-                <a href="{{ .Permalink }}" class="btn btn-outline-primary">read more</a>
+                {{ if (isset .Params "external") }}
+                <a href="{{ .Params.external }}" class="btn btn-outline-primary">read more</a>
+                {{ else }}
+                <a href="{{ .Permalink  }}" class="btn btn-outline-primary">read more</a>
+                {{ end }}
               </div>
             </article>
           </div>
