--- a/themes/liva-hugo/layouts/index.html
+++ b/themes/liva-hugo/layouts/index.html
@@ -55,7 +55,12 @@
               <span>{{ .PublishDate.Format "02 Jan 2006" }}</span>
               {{ end }}
             </div>
+            {{ if (isset .Params "external") }}
+            <a href="{{ .Params.external }}" class="h5 d-block mb-3">{{ .Title | markdownify }}</a>
+            {{ else }}
             <a href="{{ .Permalink }}" class="h5 d-block mb-3">{{ .Title | markdownify }}</a>
+            {{ end }}
+            
             {{ if (isset .Params "external") }}
             <a href="{{ .Params.external }}" class="btn btn-outline-primary">read more</a>
             {{ else }}
@@ -88,7 +93,11 @@
                 <a href="{{ `categories/` | relLangURL }}{{ . | urlize | lower }}"
                   class="text-primary">{{ . | title | humanize }}</a>
                 {{ end }}
-                <a href="{{ .Permalink }}" class="h5 d-block my-3">{{ .Title | markdownify }}</a>
+                {{ if (isset .Params "external") }}
+                <a href="{{ .Params.external }}" class="h5 d-block mb-3">{{ .Title | markdownify }}</a>
+                {{ else }}
+                <a href="{{ .Permalink }}" class="h5 d-block mb-3">{{ .Title | markdownify }}</a>
+                {{ end }}
                 <div class="mb-3 post-meta">
                   <span>By {{ .Params.author }}</span>
                   {{ if not .Params.HideDate }}
