--- a/themes/liva-hugo/layouts/index.html
+++ b/themes/liva-hugo/layouts/index.html
@@ -24,7 +24,7 @@
                   {{ end }}
                 </div>
                 <a href="{{ .Permalink }}"
-                  class="h1 font-weight-bold d-block text-dark mb-4 card-title">{{ .Title | markdownify }}</a>
+                  class="h1 font-weight-bold d-block text-light mb-4 card-title">{{ .Title | markdownify }}</a>
                 <p class="card-text">{{.Summary}}...</p>
               </div>
             </div>
