Publish ready, content missing only

--- a/themes/liva-hugo/assets/scss/_variables.scss
+++ b/themes/liva-hugo/assets/scss/_variables.scss
@@ -41,6 +41,10 @@ td, th {
 .content table th, .content table td {
     border: none !important;
 }
+
+.content a{
+    font-weight: 800;
+}
 // Font Variables
 $primary-font: 'Raleway', sans-serif;
 $icon-font: 'themify';
