--- a/themes/liva-hugo/layouts/index.html
+++ b/themes/liva-hugo/layouts/index.html
@@ -17,15 +17,20 @@
             <div class="col-md-6 offset-md-1">
               <div class="card-body">
                 <div class="mb-3 post-meta">
-                  <span>By {{ .Site.Params.Author }}</span>
+                  <span>By {{ .Params.Author }}</span>
                   {{ if not .Params.HideDate }}
                   <span class="border-bottom border-primary px-2 mx-1"></span>
                   <span>{{ .PublishDate.Format "02 January 2006" }}</span>
                   {{ end }}
                 </div>
-                <a href="{{ .Permalink }}"
+                  {{ if (isset .Params "external") }}
+                  <a href="{{ .Params.external }}"
                   class="h1 font-weight-bold d-block text-light mb-4 card-title">{{ .Title | markdownify }}</a>
-                <p class="card-text">{{.Summary}}...</p>
+                  {{ else }}
+                  <a href="{{ .Permalink }}"
+                  class="h1 font-weight-bold d-block text-light mb-4 card-title">{{ .Title | markdownify }}</a>
+                  {{ end }}
+                <p class="card-text">{{.Summary}}</p>
               </div>
             </div>
           </div>
