--- a/themes/liva-hugo/layouts/partials/header.html
+++ b/themes/liva-hugo/layouts/partials/header.html
@@ -12,7 +12,7 @@
       <div class="collapse navbar-collapse text-center" id="navigation">
         <div class="desktop-view">
           <ul class="navbar-nav mr-auto">
-            <a href="{{ .Site.BaseURL }}"><h4>Red Hat Developer Advocacy - UK & Ireland</h4></a>
+            <a href="{{ .Site.BaseURL }}"><h4>UK & Ireland Developers @ Red Hat</h4></a>
           </ul>
         </div>
 
