--- a/themes/liva-hugo/layouts/index.html
+++ b/themes/liva-hugo/layouts/index.html
@@ -11,7 +11,7 @@
           <div class="row no-gutters align-items-center">
             <div class="col-md-5">
               {{ if .Params.Image }}
-              <img src="{{ .Params.Image | absURL }}" class="card-img" alt="{{ .Title | markdownify }}">
+              <img src="{{ .Params.Image | absURL }}" style="width:200px" class="card-img" alt="{{ .Title | markdownify }}">
               {{ end }}
             </div>
             <div class="col-md-6 offset-md-1">
@@ -30,9 +30,12 @@
                   <a href="{{ .Permalink }}"
                   class="h1 font-weight-bold d-block text-light mb-4 card-title">{{ .Title | markdownify }}</a>
                   {{ end }}
-                <p class="card-text">{{.Summary}}</p>
+
               </div>
             </div>
+          </div>
+          <div class="card-body">
+            <p class="card-text">{{.Description}}</p>
           </div>
         </article>
         {{ end }}
@@ -41,7 +44,6 @@
   </div>
 </section>
 <!-- /featured post -->
-
 <!-- recent post -->
 <section>
   <div class="container">
@@ -59,19 +61,21 @@
               <span class="border-bottom border-primary px-2 mx-1"></span>
               <span>{{ .PublishDate.Format "02 Jan 2006" }}</span>
               {{ end }}
+              
             </div>
             {{ if (isset .Params "external") }}
             <a href="{{ .Params.external }}" class="h5 d-block mb-3">{{ .Title | markdownify }}</a>
             {{ else }}
             <a href="{{ .Permalink }}" class="h5 d-block mb-3">{{ .Title | markdownify }}</a>
             {{ end }}
-            
+            <p class="card-text">{{ .Description }}</p>
             {{ if (isset .Params "external") }}
             <a href="{{ .Params.external }}" class="btn btn-outline-primary">read more</a>
             {{ else }}
             <a href="{{ .Permalink  }}" class="btn btn-outline-primary">read more</a>
             {{ end }}
           </div>
+
         </article>
       </div>
       {{ end }}
@@ -81,6 +85,7 @@
 <!-- /recent post -->
 
 <!-- blog post -->
+
 <section class="section pb-0">
   <div class="container">
     <div class="row">
@@ -110,7 +115,7 @@
                   <span>{{ .PublishDate.Format "02 January 2006" }}</span>
                   {{ end }}
                 </div>
-                <p class="card-text">{{ .Summary }}</p>
+                <p class="card-text">{{ .Description }}</p>
                 {{ if (isset .Params "external") }}
                 <a href="{{ .Params.external }}" class="btn btn-outline-primary">read more</a>
                 {{ else }}
