--- a/themes/liva-hugo/layouts/index.html
+++ b/themes/liva-hugo/layouts/index.html
@@ -11,7 +11,7 @@
           <div class="row no-gutters align-items-center">
             <div class="col-md-5">
               {{ if .Params.Image }}
-              <img src="{{ .Params.Image | absURL }}" class="card-img" alt="{{ .Title | markdownify }}">
+              <img src="{{ .Params.Image | absURL }}" style="width:200px" class="card-img" alt="{{ .Title | markdownify }}">
               {{ end }}
             </div>
             <div class="col-md-6 offset-md-1">
@@ -30,9 +30,12 @@
                   <a href="{{ .Permalink }}"
                   class="h1 font-weight-bold d-block text-light mb-4 card-title">{{ .Title | markdownify }}</a>
                   {{ end }}
-                <p class="card-text">{{.Summary}}</p>
+
               </div>
             </div>
+          </div>
+          <div class="card-body">
+            <p class="card-text">{{.Description}}</p>
           </div>
         </article>
         {{ end }}
@@ -41,7 +44,6 @@
   </div>
 </section>
 <!-- /featured post -->
-
 <!-- recent post -->
 <section>
   <div class="container">
@@ -59,19 +61,21 @@
               <span class="border-bottom border-primary px-2 mx-1"></span>
               <span>{{ .PublishDate.Format "02 Jan 2006" }}</span>
               {{ end }}
+              
             </div>
             {{ if (isset .Params "external") }}
             <a href="{{ .Params.external }}" class="h5 d-block mb-3">{{ .Title | markdownify }}</a>
             {{ else }}
             <a href="{{ .Permalink }}" class="h5 d-block mb-3">{{ .Title | markdownify }}</a>
             {{ end }}
-            
+            <p class="card-text">{{ .Description }}</p>
             {{ if (isset .Params "external") }}
             <a href="{{ .Params.external }}" class="btn btn-outline-primary">read more</a>
             {{ else }}
             <a href="{{ .Permalink  }}" class="btn btn-outline-primary">read more</a>
             {{ end }}
           </div>
+
         </article>
       </div>
       {{ end }}
@@ -80,18 +84,23 @@
 </section>
 <!-- /recent post -->
 
+<div class="mt-5">
+      {{ partial "filterCategory.html" . }}
+  </div>
+     
 <!-- blog post -->
-<section class="section pb-0">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 mb-5 mb-lg-0">
+
+<section >
+  <div class="container ">
+    <div class="row ">
+      <div class="col-lg-8 mb-5 mb-lg-0 small-post-border">
         <div class="row">
           {{ $paginator := .Paginate (where .Site.RegularPages "Type" "post") }}
           {{ range $paginator.Pages }}
           <div class="col-md-6 mb-4">
-            <article class="card">
+            <article class="card"  >
               {{ if .Params.Image }}
-              <img src="{{ .Params.Image | absURL }}" class="card-img-top" alt="{{ .Title | markdownify }}">
+              <img src="{{ .Params.Image | absURL }}" class="card-img-top" style="width:200px " alt="{{ .Title | markdownify }}">
               {{ end }}
               <div class="card-body px-0">
                 {{ range .Params.Categories }}
@@ -110,7 +119,7 @@
                   <span>{{ .PublishDate.Format "02 January 2006" }}</span>
                   {{ end }}
                 </div>
-                <p class="card-text">{{ .Summary }}</p>
+                <p class="card-text">{{ .Description }}</p>
                 {{ if (isset .Params "external") }}
                 <a href="{{ .Params.external }}" class="btn btn-outline-primary">read more</a>
                 {{ else }}
@@ -121,10 +130,16 @@
           </div>
           {{ end }}
         </div>
+
       </div>
       <!-- sidebar -->
-      {{ partial "sidebar.html" . }}
+      {{ partial "quickReads.html" . }}
       <!-- /sidebar -->
+
+      <!-- bottom page filter -->
+      <div class="col-12 mt-5">
+        {{ partial "filterTags.html" . }}
+      </div>      
 
       <!-- pagination -->
       <div class="col-12 mt-5">
