--- a/themes/liva-hugo/layouts/partials/footer.html
+++ b/themes/liva-hugo/layouts/partials/footer.html
@@ -83,6 +83,6 @@
     a.src = g;
     m.parentNode.insertBefore(a, m)
   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', '{{ .Site.Params.googleAnalitycsID }}', 'auto');
+  ga('create', '{{ .Site.Params.googleAnalyticsID }}', 'auto');
   ga('send', 'pageview');
 </script>
