added the relevant social links

--- a/themes/liva-hugo/assets/scss/_variables.scss
+++ b/themes/liva-hugo/assets/scss/_variables.scss
@@ -48,3 +48,12 @@ td, th {
 // Font Variables
 $primary-font: 'Raleway', sans-serif;
 $icon-font: 'themify';
+
+#headline {
+    padding-top: 20px;
+    padding-left: 10px;
+}
+
+i {
+    font-size: 25px;
+}
