--- a/themes/liva-hugo/layouts/_default/post.html
+++ b/themes/liva-hugo/layouts/_default/post.html
@@ -8,7 +8,11 @@
         <a href="{{ `categories/` | relLangURL }}{{ . | urlize | lower }}"
             class="text-primary">{{ . | title | humanize }}</a>
         {{ end }}
+        {{ if (isset .Params "external") }}
+        <a href="{{ .Params.external  }}" class="h5 d-block my-3">{{ .Title | markdownify }}</a>
+        {{ else }}
         <a href="{{ .Permalink }}" class="h5 d-block my-3">{{ .Title | markdownify }}</a>
+        {{ end }}
         <div class="mb-3 post-meta">
             <span>By {{ .Params.author }}</span>
             {{ if not .Params.HideDate }}
